manifests/monitoring/kube-prometheus-stack-onprem/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-production"
spec:
  tls:
  - hosts:
    - monitor.example.com
    secretName: grafana-tls-prod     
  rules:
    - host: monitor.example.com
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: monitoring-grafana
              port:
                number: 80
